<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bird Voice</string>

    <!-- Choice -->
    <string name="launcher_app_name">bird voice</string>
    <string name="log_in">Log in</string>
    <string name="new_account">New account</string>

    <!--  Login  -->
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_continue">Log in to continue</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="password">Password (at least 8 symbols)</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Log In</string>
    <string name="dont_have">Don\'t have an account? </string>
    <string name="dont_have_additional"> <u>Sign up</u></string>

    <!--  Errors  -->
    <string name="email_error_valid">Enter valid email</string>
    <string name="this_field_must_be_not_empty">This field must be not empty</string>
    <string name="password_length_error">Password length should be 8 symbols or more</string>
    <string name="please_enter_the_code">Please, enter the code</string>
    <string name="space_is_not_allowed">Space is not allowed here</string>

    <!--  Register  -->
    <string name="telephone_number">Telephone number</string>
    <string name="create">Sign up</string>
    <string name="next">Continue</string>

    <!--  Additional  -->
    <string name="by_continuing_you_agree_to_our_privacy_policy">By continuing, you agree to our <a href="http://google.com">Privacy Policy</a>.</string>
    <string name="additional_information">Additional information</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="model_isnt_loaded">Language model isn\'t loaded yet</string>

    <!--  Inform page  -->
    <string name="inform_rv_item_1_description">Our service, thanks to a new unique technology, helps to recognize and determine by the sounds reproduced by a particular bird, its name, species, family, habitat.</string>
    <string name="recording_of_a_bird_singing">Recording of a bird singing</string>
    <string name="inform_rv_item_2_description">Press the microphone to start recognition and the stop button to end recording of birdsong</string>
    <string name="listen_your_recording">Listen to your record</string>
    <string name="inform_rv_item_3_description">You may listen to your recording of the bird singing and make sure about it cleanliness before the recognition</string>
    <string name="get_recognition_options">Get recognition options</string>
    <string name="common_blackbird">Common Blackbird</string>
    <string name="inform_rv_item_4_description">Check out the search results, the percentages indicate the likely recognition options</string>
    <string name="try_now">Try now</string>

    <!--  Edit record  -->
    <string name="time">Time</string>
    <string name="time_plug">10:30</string>
    <string name="date">Date</string>
    <string name="date_plug">15/08/22</string>
    <string name="place">Place</string>
    <string name="place_plug">Belarus, Minsk, Moskovsky district</string>
    <string name="timer_plug">0:00</string>
    <string name="edit_rec_description">Select the fragment to be recognized from the proposed audio recording, click on the screen of the stereogram</string>
    <string name="edit_rec_start">Start recognition</string>
    <string name="file_saved">File saved!</string>

    <!--  Recognition page 1  -->
    <string name="in_the_process_please_wait_a_bit" tools:ignore="TypographyEllipsis">The recognition process... Wait a bit</string>
    <string name="recognition_1_dots" tools:ignore="TypographyEllipsis">...</string>

    <!--  Recognition page 2  -->
    <string name="already_in_collection">Already in collection</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="added">Added</string>

    <!--  Tabs  -->
    <string name="tab_1_appearance">Appearance</string>
    <string name="tab_1_text_plug">Lorem ipsum dolor sit amet. Et minima ntium aut ratione numquam ut consectetur odio in distinctio quis ut laboriosam voluptate sed rum corrupti non internos error.</string>
    <string name="tab_1_behaviour">Behaviour</string>
    <string name="tab_1_habitat">Habitat</string>
    <string name="id">ID</string>
    <string name="id_plug">1234566788999888884545</string>
    <string name="data_display_areas">Data display areas</string>
    <string name="general_information">General Information</string>
    <string name="scientific_information">Scientific Information</string>

    <!--  Collection  -->
    <string name="collection_number_plug">1</string>
    <string name="more">More</string>
    <string name="map">Map</string>
    <string name="remove">Remove</string>
    <string name="collection_text">Here will be your collection of birds</string>

    <!--  Dialog  -->
    <string name="dialog_1_header">Removing bird!</string>
    <string name="dialog_1_text">Are you sure you want to delete the record from the collection?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_2_text">The bird has been removed</string>
    <string name="choose_language">Choose language</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="dialog_er_title">Go back to the home screen?</string>
    <string name="dialog_er_body">If you return to the home screen, the recording you made will not be saved. Complete the recognition or download the recording to your phone</string>
    <string name="dialog_go_main">Go to main</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_r1_title">Stop the recognition process?</string>
    <string name="dialog_r1_body">If recognition is stopped, you will return back to the screen with your recording</string>
    <string name="dialog_stop">Stop</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete your account?</string>

    <!--  Feedback  -->
    <string name="feedback_title">Feedback</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="send">Send</string>
    <string name="thanks">Thanks!</string>
    <string name="feedback_congrats_text">Thank you for your assistance in the development of the Bird Voice application, we appreciate every feedback and constantly improve our services and improve their accuracy!</string>

    <!--  Drawer  -->
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="instruction">Instruction</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign out</string>
    <string name="delete">Delete account</string>

    <!--  Bottom nav  -->
    <string name="recording">Recording</string>
    <string name="collection">Collection</string>

    <string name="fail_to_login">Failed to login</string>
    <string name="belarus">Belarus</string>
    <string name="sec">sec</string>
    <string name="lang_by">Беларуская</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_en">English</string>

    <!--  Screen titles  -->
    <string name="record_your_environment">Record your environment</string>
    <string name="listen_to_your_record">Your record</string>
    <string name="recognition_service">Recognition service</string>
    <string name="recognition_results">Recognition results</string>
    <string name="how_it_works">How it works?</string>
</resources>