<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/background_dialogs"
    android:elevation="4dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_lang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/choose_language"
        android:textSize="24sp"
        android:textColor="@color/primary_blue"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_lang_button_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/lang_en"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"

        android:backgroundTint="@color/white"

        app:cornerRadius="32dp"
        app:rippleColor="@color/primary_button_push"

        android:paddingVertical="16dp"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"

        app:layout_constraintTop_toBottomOf="@id/dialog_lang_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_lang_button_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/lang_by"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/primary_blue"
        android:fontFamily="@font/roboto"

        android:backgroundTint="@color/white"

        app:cornerRadius="32dp"
        app:rippleColor="@color/primary_button_push"

        android:paddingVertical="16dp"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"

        app:layout_constraintTop_toBottomOf="@id/dialog_lang_button_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_lang_button_ru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/lang_ru"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/primary_blue"
        android:fontFamily="@font/roboto"

        android:backgroundTint="@color/white"

        app:cornerRadius="32dp"
        app:rippleColor="@color/primary_button_push"

        android:paddingVertical="16dp"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintTop_toBottomOf="@id/dialog_lang_button_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>