<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/background_dialogs"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_log_out_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"

        android:fontFamily="@font/roboto"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textColor="@color/primary_red"
        android:textSize="24sp"
        android:textStyle="bold"

        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_log_out_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"

        android:backgroundTint="@color/white"

        android:fontFamily="@font/roboto"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"

        android:paddingVertical="16dp"
        android:paddingHorizontal="48dp"

        app:cornerRadius="32dp"
        app:rippleColor="@color/primary_button_push"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_log_out_yes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_log_out_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_log_out_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"

        android:backgroundTint="@color/white"

        android:fontFamily="@font/roboto"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"

        android:paddingVertical="16dp"
        android:paddingHorizontal="48dp"

        app:cornerRadius="32dp"
        app:rippleColor="@color/primary_button_push"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_log_out_no"
        app:layout_constraintTop_toBottomOf="@id/dialog_log_out_title" />

</androidx.constraintlayout.widget.ConstraintLayout>