<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@drawable/rv_item_shape_1"
    tools:ignore="ContentDescription"
    android:layout_marginHorizontal="16dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_2_top_left_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_2_cloud_top_left"

        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="@id/dialog_1_top_left_cloud"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/dialog_2_top_right_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_2_cloud_top_right"

        android:visibility="invisible"

        app:layout_constraintStart_toStartOf="@id/dialog_1_bird"
        app:layout_constraintTop_toTopOf="@id/dialog_1_top_right_cloud"/>

    <ImageView
        android:id="@+id/dialog_2_bottom_right_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_2_cloud_bottom_right"

        android:visibility="invisible"

        app:layout_constraintTop_toBottomOf="@id/dialog_1_top_right_cloud"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/dialog_1_top_left_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_1_cloud_top_left"

        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_1_top_right_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_1_cloud_top_right"

        app:layout_constraintBottom_toBottomOf="@id/dialog_1_top_left_cloud"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/dialog_1_bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_bird_1"

        android:layout_marginBottom="8dp"

        app:layout_constraintStart_toEndOf="@id/dialog_1_top_left_cloud"
        app:layout_constraintBottom_toBottomOf="@id/dialog_1_top_left_cloud"
        app:layout_constraintEnd_toStartOf="@id/dialog_1_top_right_cloud"
        app:layout_constraintTop_toTopOf="@id/dialog_1_top_right_cloud"/>

    <TextView
        android:id="@+id/dialog_1_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/dialog_1_header"
        android:textStyle="bold"
        android:textColor="@color/primary_red"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_1_bird"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dialog_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/dialog_1_text"
        android:textSize="16sp"
        android:textColor="@color/dialog_text"
        android:fontFamily="@font/roboto"
        android:gravity="center"

        android:layout_marginHorizontal="38dp"

        app:layout_constraintTop_toBottomOf="@id/dialog_1_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_1_button_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_1_text">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_1_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/white"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_blue"

            app:rippleColor="@color/primary_button_push"
            app:cornerRadius="16dp"

            android:layout_marginHorizontal="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_1_yes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_1_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/white"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_blue"

            app:cornerRadius="16dp"
            app:rippleColor="@color/primary_button_push"

            android:layout_marginHorizontal="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dialog_1_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/dialog_2_bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/dialog_bird_2"

        android:visibility="invisible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/dialog_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/dialog_2_text"
        android:textColor="@color/primary_text_blue"
        android:textSize="18sp"
        android:gravity="center"

        android:visibility="invisible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_2_bird"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>