<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:ignore="ContentDescription"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/collection_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/map"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primary_text_blue"
        android:textSize="16sp"

        android:backgroundTint="@color/white"

        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"

        android:clickable="false"
        android:visibility="gone"

        app:cornerRadius="32dp"
        app:rippleColor="@color/primary_button_push"
        app:icon="@drawable/ic_map"
        app:iconGravity="textEnd"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collection_player_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:visibility="gone"

        android:background="@drawable/rv_item_shape_2"
        android:elevation="2dp"

        app:layout_constraintTop_toBottomOf="@id/collection_map_button"
        app:layout_constraintStart_toStartOf="@id/collection_map_button"
        app:layout_constraintEnd_toEndOf="@id/collection_map_button">

        <ImageButton
            android:id="@+id/collection_play_button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:src="@drawable/ic_play_button"
            android:background="@drawable/ripple_rounded"
            android:elevation="4dp"

            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/collection_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/timer_plug"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary_text_blue"

            android:layout_marginStart="8dp"

            app:layout_constraintTop_toTopOf="@id/collection_play_button"
            app:layout_constraintBottom_toBottomOf="@id/collection_play_button"
            app:layout_constraintStart_toEndOf="@id/collection_play_button"/>

        <ImageButton
            android:id="@+id/collection_menu_button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:src="@drawable/ic_player_menu"
            android:background="@drawable/ripple_rounded"
            android:elevation="4dp"

            android:layout_marginEnd="6dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/collection_play_button"
            app:layout_constraintBottom_toBottomOf="@id/collection_play_button"/>

        <SeekBar
            android:id="@+id/collection_audio_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="8dp"

            app:layout_constraintStart_toEndOf="@id/collection_timer"
            app:layout_constraintEnd_toStartOf="@id/collection_menu_button"
            app:layout_constraintTop_toTopOf="@id/collection_play_button"
            app:layout_constraintBottom_toBottomOf="@id/collection_play_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_player_holder">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_1_map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collection_player_holder"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/recognition_2_tab_1_text_1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tab_1_appearance"
                android:textColor="@color/primary_text_blue"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"

                android:background="@drawable/rv_bird_card_2"
                android:elevation="4dp"
                android:translationZ="2dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/recognition_2_tab_1_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/tab_1_text_plug"
                android:textColor="@color/primary_text_blue"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"

                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"

                app:layout_constraintTop_toBottomOf="@id/recognition_2_tab_1_text_1_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/recognition_2_tab_1_text_2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tab_1_behaviour"
                android:textColor="@color/primary_text_blue"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"

                android:background="@drawable/rv_bird_card_2"
                android:elevation="4dp"
                android:translationZ="2dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"

                app:layout_constraintTop_toBottomOf="@id/recognition_2_tab_1_text_1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/recognition_2_tab_1_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/tab_1_text_plug"
                android:textColor="@color/primary_text_blue"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"

                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"

                app:layout_constraintTop_toBottomOf="@id/recognition_2_tab_1_text_2_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/recognition_2_tab_1_text_3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tab_1_habitat"
                android:textColor="@color/primary_text_blue"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"

                android:background="@drawable/rv_bird_card_2"
                android:elevation="4dp"
                android:translationZ="2dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"

                app:layout_constraintTop_toBottomOf="@id/recognition_2_tab_1_text_2"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/recognition_2_tab_1_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/tab_1_text_plug"
                android:textColor="@color/primary_text_blue"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"

                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"

                app:layout_constraintTop_toBottomOf="@id/recognition_2_tab_1_text_3_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>